<resources>
    <string name="app_name">Angel Detector</string>

    <!--ScanningActivity-->
    <string name="button_turn_bluetooth_on_button">Turn Bluetooth On</string>
    <string name="button_start_scanning">Start Scanning for Angel</string>
    <string name="status_bluetooth_on">Your Bluetooth is on!</string>
    <string name="status_bluetooth_off">Your Bluetooth is off...</string>
    <string name="status_bluetooth_scanning">Scanning for bluetooth Devices</string>
    <string name="status_bluetooth_not_scanning">Not scanning for bluetooth Devices</string>
    <string name="status_bluetooth_devices_found">Found bluetooth devices!</string>
    <string name="status_bluetooth_devices_not_found">Did not find angel devices!</string>
    <string name="label_found_devices">Found devices: </string>

    <!--HomeActivity-->
    <string name="angel_sensor">AngelSensor: </string>
    <string name="angel_status">Connection status: </string>
    <string name="status_connection_not_connected">Not connected to gatt server</string>
    <string name="status_connection_connected">Connected to gatt server, discovering services...</string>
    <string name="status_discovered_gatt_services">Discovered gatt services</string>
    <string name="gatt_characteristics">Gatt Characteristics of Service</string>
    <string name="status_no_discovered_gatt_services">Cannot find any GATT Services...</string>

    <string name="display_data">Data received: </string>
</resources>
